--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,47 +1,85 @@
 plugins {
-    alias(libs.plugins.android.application)
-    alias(libs.plugins.kotlin.android)
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
     namespace 'com.currency.exchanger'
-    compileSdk 36
+    compileSdk 34
+    
+    buildFeatures {
+        viewBinding true
+    }
 
     defaultConfig {
         applicationId "com.currency.exchanger"
         minSdk 24
-        targetSdk 36
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    buildFeatures {
+        buildConfig = true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = '17'
+        freeCompilerArgs += [
+            "-Xjvm-default=all",
+            "-opt-in=kotlin.RequiresOptIn"
+        ]
+    }
+    
+    kotlin {
+        jvmToolchain(17)
+    }
+
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            }
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
-    kotlinOptions {
-        jvmTarget = '11'
-    }
-}
 
-dependencies {
-
-    implementation libs.androidx.core.ktx
-    implementation libs.androidx.appcompat
-    implementation libs.material
-    implementation libs.androidx.legacy.support.v4
-    implementation libs.androidx.lifecycle.livedata.ktx
-    implementation libs.androidx.lifecycle.viewmodel.ktx
-    implementation libs.androidx.fragment.ktx
-    testImplementation libs.junit
-    androidTestImplementation libs.androidx.junit
-    androidTestImplementation libs.androidx.espresso.core
-}
+    dependencies {
+        // AndroidX Core
+        implementation "androidx.core:core-ktx:${rootProject.ext.versions.coreKtx}"
+        implementation "androidx.appcompat:appcompat:${rootProject.ext.versions.appcompat}"
+        implementation "com.google.android.material:material:${rootProject.ext.versions.material}"
+        implementation "androidx.constraintlayout:constraintlayout:${rootProject.ext.versions.constraintlayout}"
+        
+        // Lifecycle components
+        implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${rootProject.ext.versions.lifecycle}"
+        implementation "androidx.lifecycle:lifecycle-livedata-ktx:${rootProject.ext.versions.lifecycle}"
+        implementation "androidx.lifecycle:lifecycle-runtime-ktx:${rootProject.ext.versions.lifecycle}"
+        implementation "androidx.fragment:fragment-ktx:${rootProject.ext.versions.fragmentKtx}"
+        
+        // Room
+        implementation "androidx.room:room-runtime:${rootProject.ext.versions.room}"
+        implementation "androidx.room:room-ktx:${rootProject.ext.versions.room}"
+        kapt "androidx.room:room-compiler:${rootProject.ext.versions.room}"
+        
+        // Hilt
+        implementation "com.google.dagger:hilt-android:${rootProject.ext.versions.hilt}"
+        kapt "com.google.dagger:hilt-android-compiler:${rootProject.ext.versions.hilt}"
+        
+        // For Hilt support for ViewModel
+        implementation 'androidx.hilt:hilt-navigation-compose:1.1.0'
+        kapt 'androidx.hilt:hilt-compiler:1.1.0'
+        
+        // Testing
+        testImplementation "junit:junit:${rootProject.ext.versions.junit}"
+        androidTestImplementation "androidx.test.ext:junit:${rootProject.ext.versions.junitExt}"
+        androidTestImplementation "androidx.test.espresso:espresso-core:${rootProject.ext.versions.espresso}"
+    }
