--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,16 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048m -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g"
+kapt.incremental.apt=true
+kapt.use.worker.api=true
+kapt.include.compile.classpath=false
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
+android.useAndroidX=true
+android.enableJetifier=true
+kotlin.code.style=official
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. For more details, visit
 # https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
