Update UI added currency and exchange rate

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,11 @@ android {
         implementation "com.google.dagger:hilt-android:${rootProject.ext.versions.hilt}"
         kapt "com.google.dagger:hilt-android-compiler:${rootProject.ext.versions.hilt}"
         
+        // Retrofit
+        implementation "com.squareup.retrofit2:retrofit:2.9.0"
+        implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+        implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+        
         // For Hilt support for ViewModel
         implementation 'androidx.hilt:hilt-navigation-compose:1.1.0'
         kapt 'androidx.hilt:hilt-compiler:1.1.0'
