--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,11 @@ android {
         
         // Testing
         testImplementation "junit:junit:${rootProject.ext.versions.junit}"
+        testImplementation 'androidx.arch.core:core-testing:2.2.0'
+        testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
+        testImplementation 'io.mockk:mockk:1.13.8'
+        testImplementation 'io.mockk:mockk-agent-jvm:1.13.8'
+        testImplementation 'app.cash.turbine:turbine:1.0.0'
         androidTestImplementation "androidx.test.ext:junit:${rootProject.ext.versions.junitExt}"
         androidTestImplementation "androidx.test.espresso:espresso-core:${rootProject.ext.versions.espresso}"
     }
